BEAUTIFY PHASE 1 - Basic app card (Changed the color of the progress bar coz it wasnt looking good on the real app) - Expandable app card - Solve the issue concerning the background of the text input layout (NOT WORKED) - Work on the all aps indicator - Work on the search bar for all apps (NOT WORKED)

--- a/app/src/main/res/layout/fragment_active_dp.xml
+++ b/app/src/main/res/layout/fragment_active_dp.xml
@@ -22,19 +22,30 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-            <EditText
-                android:id="@+id/editTextTextPersonName"
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="ACTIVE DP" />
+                android:layout_margin="5dp"
+                android:background="#CDCDCD"
+                app:boxBackgroundMode="filled">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right|end"
+                    android:backgroundTint="@android:color/transparent"
+                    android:drawableEnd="@drawable/ic_baseline_search_24"
+                    android:hint="Search apps" />
+            </com.google.android.material.textfield.TextInputLayout>
 
             <Switch
                 android:id="@+id/switch2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="All apps" />
+                android:layout_margin="5dp"
+                android:padding="15dp"
+                android:text="All apps"
+                android:textSize="18sp" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view2"
