--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,11 @@
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        app:tabBackground="@color/colorPrimary"
+        app:tabIndicatorColor="#fff"
+        app:tabIndicatorGravity="bottom"
+        app:tabTextColor="#fff">
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
