--- a/app/src/main/res/layout/card_main_data_plan_card.xml
+++ b/app/src/main/res/layout/card_main_data_plan_card.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="10dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -32,18 +33,17 @@
                     android:id="@+id/dp_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="60dp"
                     android:layout_weight="1"
-                    android:paddingLeft="10dp"
+                    android:padding="15dp"
                     android:text="Data plan name"
                     android:textColor="#fff"
-                    android:textSize="20sp" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
+                    android:layout_margin="8dp"
                     android:background="@drawable/data_plan_active_indicator_shape"
                     android:paddingLeft="20dp"
                     android:paddingTop="5dp"
@@ -71,14 +71,14 @@
                 android:paddingBottom="2dp"
                 android:text="Mobile Data plan"
                 android:textColor="#fff"
-                android:textSize="18sp" />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginRight="5dp"
                 android:paddingLeft="5dp"
                 android:paddingTop="2dp"
