--- a/app/src/main/res/layout/dialog_create_dp.xml
+++ b/app/src/main/res/layout/dialog_create_dp.xml
@@ -222,7 +222,7 @@
                         android:id="@+id/button"
                         style="@style/Widget.AppCompat.Button"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="35dp"
                         android:layout_gravity="center"
                         android:background="@drawable/custom_button_background"
                         android:drawableLeft="@drawable/ic_baseline_add_24"
@@ -231,7 +231,7 @@
                         android:paddingRight="20dp"
                         android:text="Create Data Plan"
                         android:textColor="@color/colorPrimary"
-                        android:textSize="18sp" />
+                        android:textSize="14sp" />
                 </LinearLayout>
             </ScrollView>
 
