Work on the data view activity

--- a/app/src/main/res/layout/activity_data_plan.xml
+++ b/app/src/main/res/layout/activity_data_plan.xml
@@ -22,15 +22,23 @@
                 android:id="@+id/button5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                android:text="Delete" />
+                android:backgroundTint="@color/colorAccent"
+                android:text="Delete"
+                android:textColor="@color/secondaryTextColor" />
 
             <Button
                 android:id="@+id/button4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                android:text="Save" />
+                android:backgroundTint="@color/colorPrimary"
+                android:text="Save"
+                android:textColor="@color/primaryTextColor" />
         </LinearLayout>
     </LinearLayout>
 
@@ -48,85 +56,154 @@
                 android:id="@+id/button3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:layout_margin="20dp"
+                android:backgroundTint="@color/colorPrimary"
+                android:text="Activate Data plan"
+                android:textColor="@color/primaryTextColor" />
 
             <ImageView
                 android:id="@+id/imageView4"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerInside"
-                tools:srcCompat="@tools:sample/avatars" />
+                tools:srcCompat="@drawable/sample_app_icon" />
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/textView11"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:layout_margin="5dp"
+                    android:text="60% used"
+                    android:textColor="@color/colorPrimary" />
 
                 <TextView
                     android:id="@+id/textView12"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:layout_margin="5dp"
+                    android:text="40mb of 400mb remaining"
+                    android:textColor="@color/colorPrimary" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:orientation="vertical">
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1">
+                    android:layout_marginTop="15dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/text_input_layout_shape"
+                    android:paddingStart="0dp"
+                    android:paddingLeft="0dp"
+                    android:paddingEnd="0dp"
+                    android:paddingRight="0dp"
+                    android:textColorHint="#333"
+                    app:helperTextTextColor="#333">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="hint" />
+                        android:backgroundTint="@android:color/transparent"
+                        android:hint="Name"
+                        android:outlineProvider="none"
+                        android:singleLine="true"
+                        android:text="Data plan name"
+                        android:textColorHighlight="#333"
+                        android:textColorLink="#333" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1">
+                    android:layout_marginTop="15dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/text_input_layout_shape"
+                    android:paddingStart="0dp"
+                    android:paddingLeft="0dp"
+                    android:paddingEnd="0dp"
+                    android:paddingRight="0dp"
+                    android:textColorHint="#333"
+                    app:helperTextTextColor="#333">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="hint" />
+                        android:backgroundTint="@android:color/transparent"
+                        android:hint="Data size"
+                        android:outlineProvider="none"
+                        android:singleLine="true"
+                        android:text="23mb"
+                        android:textColorHighlight="#333"
+                        android:textColorLink="#333" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1">
+                    android:layout_marginTop="15dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/text_input_layout_shape"
+                    android:paddingStart="0dp"
+                    android:paddingLeft="0dp"
+                    android:paddingEnd="0dp"
+                    android:paddingRight="0dp"
+                    android:textColorHint="#333"
+                    app:helperTextTextColor="#333">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="hint" />
+                        android:backgroundTint="@android:color/transparent"
+                        android:hint="Start date/time"
+                        android:outlineProvider="none"
+                        android:singleLine="true"
+                        android:text="24-01-21 02:40pm"
+                        android:textColorHighlight="#333"
+                        android:textColorLink="#333" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1">
+                    android:layout_marginTop="15dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/text_input_layout_shape"
+                    android:paddingStart="0dp"
+                    android:paddingLeft="0dp"
+                    android:paddingEnd="0dp"
+                    android:paddingRight="0dp"
+                    android:textColorHint="#333"
+                    app:helperTextTextColor="#333">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="hint" />
+                        android:backgroundTint="@android:color/transparent"
+                        android:hint="End date/time"
+                        android:outlineProvider="none"
+                        android:singleLine="true"
+                        android:text="24-01-21 04:40pm"
+                        android:textColorHighlight="#333"
+                        android:textColorLink="#333" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="15dp"
                     android:layout_weight="1"
                     android:orientation="vertical">
 
@@ -134,12 +211,16 @@
                         android:id="@+id/textView10"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="TextView" />
+                        android:text="Type of data (WIFI/mobile)"
+                        android:textSize="16sp" />
 
                     <Spinner
                         android:id="@+id/data_type_spinner"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:padding="10dp" />
+
                 </LinearLayout>
             </LinearLayout>
 
