--- a/app/src/main/res/layout/card_main_app_card.xml
+++ b/app/src/main/res/layout/card_main_app_card.xml
@@ -105,7 +105,7 @@
                 android:layout_marginEnd="10dp"
                 android:animateLayoutChanges="true"
                 android:orientation="vertical"
-                android:visibility="visible">
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/textView13"
@@ -167,7 +167,7 @@
 
                     <Button
                         android:layout_width="wrap_content"
-                        android:layout_height="52dp"
+                        android:layout_height="wrap_content"
                         android:layout_margin="2dp"
                         android:layout_weight="1"
                         android:backgroundTint="@color/colorPrimary"
