--- a/app/src/main/res/layout/activity_data_plan.xml
+++ b/app/src/main/res/layout/activity_data_plan.xml
@@ -61,12 +61,10 @@
                 android:text="Activate Data plan"
                 android:textColor="@color/primaryTextColor" />
 
-            <ImageView
-                android:id="@+id/imageView4"
+            <lecho.lib.hellocharts.view.PieChartView
+                android:id="@+id/pie_chart_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerInside"
-                tools:srcCompat="@drawable/sample_app_icon" />
+                android:layout_height="250dp" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
