--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,11 +33,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/colorPrimary"
-        app:tabIndicatorColor="@color/primaryTextColor"
+        android:background="@color/my_white"
+        android:elevation="8dp"
+        app:tabIndicatorColor="@color/my_green"
         app:tabIndicatorGravity="bottom"
         app:tabMode="fixed"
-        app:tabTextColor="@color/primaryTextColor">
+        app:tabSelectedTextColor="@color/my_green_black"
+        app:tabTextColor="@color/my_green">
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
