--- a/app/src/main/res/layout/card_main_app_card.xml
+++ b/app/src/main/res/layout/card_main_app_card.xml
@@ -32,8 +32,8 @@
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/app_icon_circle_image_view"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_margin="10dp"
                     android:scaleType="centerCrop"
                     android:src="@drawable/sample_app_icon"
@@ -43,9 +43,9 @@
                     android:id="@+id/app_name_textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
                     android:text="Whatsapp"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />
 
                 <Switch
                     android:id="@+id/switch1"
@@ -83,7 +83,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="85%"
-                        android:textColor="#FF979797"
+                        android:textColor="@color/my_green"
                         android:textSize="15sp" />
                 </LinearLayout>
 
@@ -93,7 +93,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:progress="85"
-                    android:progressTint="@color/colorPrimary" />
+                    android:progressTint="@color/my_green" />
             </LinearLayout>
 
             <LinearLayout
@@ -105,14 +105,15 @@
                 android:layout_marginEnd="10dp"
                 android:animateLayoutChanges="true"
                 android:orientation="vertical"
-                android:visibility="gone">
+                android:visibility="visible">
 
                 <TextView
                     android:id="@+id/textView13"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Data used (25mb of 600mb)"
+                    android:text="Unallocated data in data plan name"
+                    android:textColor="@color/my_green"
                     android:textSize="15sp" />
 
                 <TextView
@@ -122,6 +123,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_weight="1"
                     android:text="23mb"
+                    android:textColor="@color/my_green"
                     android:textSize="15sp" />
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -151,6 +153,7 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="2dp"
                     android:layout_marginTop="5dp"
                     android:layout_weight="1"
                     android:orientation="horizontal">
@@ -158,47 +161,47 @@
                     <Button
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="2dp"
+                        android:layout_marginEnd="15dp"
                         android:layout_weight="1"
-                        android:backgroundTint="@color/colorPrimary"
-                        android:drawableLeft="@drawable/ic_baseline_add_24"
-                        android:drawablePadding="10dp"
+                        android:backgroundTint="@color/my_green"
+                        android:drawableLeft="@drawable/ic_baseline_add_24_white"
+                        android:drawablePadding="0dp"
                         android:text="Add " />
 
                     <Button
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="2dp"
                         android:layout_weight="1"
-                        android:backgroundTint="@color/colorPrimary"
-                        android:drawableLeft="@drawable/ic_baseline_remove_24"
-                        android:drawablePadding="10dp"
+                        android:backgroundTint="@color/my_green"
+                        android:drawableLeft="@drawable/ic_baseline_remove_24_white"
+                        android:drawablePadding="0dp"
                         android:text="Remove" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="2dp"
                     android:layout_weight="1"
                     android:orientation="horizontal">
 
                     <Button
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="2dp"
+                        android:layout_marginEnd="15dp"
                         android:layout_weight="1"
-                        android:backgroundTint="@color/colorPrimary"
-                        android:drawableLeft="@drawable/ic_baseline_add_24"
-                        android:drawablePadding="10dp"
+                        android:backgroundTint="@color/my_green"
+                        android:drawableLeft="@drawable/ic_baseline_add_24_white"
+                        android:drawablePadding="0dp"
                         android:text="Add all" />
 
                     <Button
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="2dp"
                         android:layout_weight="1"
-                        android:backgroundTint="@color/colorPrimary"
-                        android:drawableLeft="@drawable/ic_baseline_remove_24"
+                        android:backgroundTint="@color/my_green"
+                        android:drawableLeft="@drawable/ic_baseline_remove_24_white"
+                        android:drawablePadding="0dp"
                         android:text="Remove all" />
                 </LinearLayout>
 
@@ -206,12 +209,11 @@
                     android:id="@+id/button7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="2dp"
-                    android:layout_marginTop="2dp"
-                    android:layout_marginRight="2dp"
+                    android:layout_marginStart="2dp"
                     android:layout_marginBottom="5dp"
                     android:layout_weight="1"
-                    android:backgroundTint="@color/colorPrimary"
+                    android:backgroundTint="@color/my_green"
+                    android:drawablePadding="0dp"
                     android:text="Set unlimited data" />
             </LinearLayout>
         </LinearLayout>
