--- a/app/src/main/res/layout/card_main_data_plan_card.xml
+++ b/app/src/main/res/layout/card_main_data_plan_card.xml
@@ -8,14 +8,14 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
         android:padding="10dp"
-        app:cardBackgroundColor="@color/colorPrimary"
+        app:cardBackgroundColor="@color/my_white"
         app:cardCornerRadius="7dp"
-        app:cardElevation="0dp">
+        app:cardElevation="2dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -25,7 +25,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorPrimaryDark"
+                android:background="@color/my_green"
                 android:gravity="center"
                 android:orientation="horizontal">
 
@@ -34,29 +34,32 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:padding="15dp"
+                    android:padding="12dp"
                     android:text="Data plan name"
-                    android:textColor="#fff"
+                    android:textColor="@color/my_white"
                     android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
+                    android:layout_margin="10dp"
                     android:background="@drawable/data_plan_active_indicator_shape"
                     android:paddingLeft="20dp"
                     android:paddingTop="5dp"
                     android:paddingRight="20dp"
                     android:paddingBottom="5dp"
-                    android:text="Active" />
+                    android:text="Active"
+                    android:textAllCaps="true"
+                    android:textColor="@color/my_grey"
+                    android:textSize="16sp" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="#333"
+                android:background="@color/my_green_black"
                 android:orientation="vertical">
 
             </LinearLayout>
@@ -66,25 +69,25 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:paddingLeft="5dp"
-                android:paddingTop="2dp"
+                android:paddingLeft="15dp"
+                android:paddingTop="10dp"
                 android:paddingBottom="2dp"
                 android:text="Mobile Data plan"
-                android:textColor="#fff"
-                android:textSize="16sp" />
+                android:textColor="@color/my_black"
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginRight="5dp"
-                android:paddingLeft="5dp"
+                android:paddingLeft="15dp"
                 android:paddingTop="2dp"
                 android:paddingBottom="2dp"
                 android:text="75mb of 1024mb used"
-                android:textColor="#fff"
+                android:textColor="@color/my_black"
                 android:textSize="16sp" />
 
             <TextView
@@ -93,11 +96,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:paddingLeft="5dp"
+                android:paddingLeft="15dp"
                 android:paddingTop="2dp"
                 android:paddingBottom="2dp"
                 android:text="2 days remaining 14hr 24min"
-                android:textColor="#fff"
+                android:textColor="@color/my_black"
                 android:textSize="16sp" />
 
             <TextView
@@ -106,12 +109,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:layout_marginBottom="5dp"
-                android:paddingLeft="5dp"
+                android:layout_marginBottom="15dp"
+                android:paddingLeft="15dp"
                 android:paddingTop="2dp"
                 android:paddingBottom="2dp"
                 android:text="27-Jan-2021"
-                android:textColor="#fff"
+                android:textColor="@color/my_black"
                 android:textSize="16sp" />
         </LinearLayout>
 
