--- a/app/src/main/res/layout/fragment_active_dp.xml
+++ b/app/src/main/res/layout/fragment_active_dp.xml
@@ -32,11 +32,11 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginLeft="5dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginLeft="15dp"
                 android:layout_marginTop="0dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginRight="5dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginRight="15dp"
                 android:layout_marginBottom="5dp"
                 android:orientation="vertical">
 
@@ -58,8 +58,8 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="#000"
+                    android:layout_height="2dp"
+                    android:background="@color/my_yellow"
                     android:orientation="vertical"></LinearLayout>
             </LinearLayout>
 
