--- a/app/src/main/res/layout/fragment_dps.xml
+++ b/app/src/main/res/layout/fragment_dps.xml
@@ -18,10 +18,13 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/my_white"
         android:clickable="true"
         android:text="New DP"
-        app:icon="@drawable/ic_baseline_add_24"
-        app:srcCompat="@drawable/ic_baseline_add_24" />
+        android:textColor="@color/my_green"
+        app:backgroundTint="@color/my_white"
+        app:icon="@drawable/ic_baseline_add_24_green_black"
+        app:srcCompat="@drawable/ic_baseline_add_24_green_black" />
 
     <!--<com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/floatingActionButton"
