--- a/app/src/main/res/layout/dialog_create_dp.xml
+++ b/app/src/main/res/layout/dialog_create_dp.xml
@@ -23,14 +23,14 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView2"
+                    android:id="@+id/dialog_cancel_image_view"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="5dp"
                     app:srcCompat="@drawable/ic_baseline_keyboard_arrow_left_24" />
 
                 <TextView
-                    android:id="@+id/textView9"
+                    android:id="@+id/dialog_cancel_text_view"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -69,6 +69,7 @@
                             app:helperTextTextColor="#333">
 
                             <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/dialog_dp_name"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:backgroundTint="@android:color/transparent"
@@ -93,6 +94,7 @@
                             app:helperTextTextColor="#333">
 
                             <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/dialog_dp_datasize"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:backgroundTint="@android:color/transparent"
@@ -117,7 +119,7 @@
                             app:helperTextTextColor="#333">
 
                             <com.google.android.material.textfield.TextInputEditText
-                                android:id="@+id/dialog_start_time_button"
+                                android:id="@+id/dialog_start_time"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:backgroundTint="@android:color/transparent"
@@ -142,7 +144,7 @@
                             app:helperTextTextColor="#333">
 
                             <com.google.android.material.textfield.TextInputEditText
-                                android:id="@+id/dialog_end_time_button"
+                                android:id="@+id/dialog_end_time"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:backgroundTint="@android:color/transparent"
