The first part of working with the local database has been done. Moving to the next thing.

--- a/app/src/main/res/layout/activity_data_plan.xml
+++ b/app/src/main/res/layout/activity_data_plan.xml
@@ -127,6 +127,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:backgroundTint="@android:color/transparent"
+                        android:editable="false"
                         android:hint="Name"
                         android:outlineProvider="none"
                         android:singleLine="true"
@@ -153,6 +154,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:backgroundTint="@android:color/transparent"
+                        android:editable="false"
                         android:hint="Data size"
                         android:outlineProvider="none"
                         android:singleLine="true"
@@ -179,6 +181,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:backgroundTint="@android:color/transparent"
+                        android:editable="false"
                         android:hint="Start date/time"
                         android:outlineProvider="none"
                         android:singleLine="true"
@@ -205,6 +208,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:backgroundTint="@android:color/transparent"
+                        android:editable="false"
                         android:hint="End date/time"
                         android:outlineProvider="none"
                         android:singleLine="true"
